force-app/main/default/objects/Project__c/fields/Actual_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time__c</fullName>
    <description>Created By: YB
Business Unit: BTC
Purpose: Time taken to complete the Project.</description>
    <label>Actual Time</label>
    <summarizedField>Project_Task__c.Actual_time__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>