force-app/main/default/objects/Project__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What date was the project assigned?</inlineHelpText>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>