force-app/main/default/objects/Project__c/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: YB
Business Unit:
Purpose:</description>
    <label>Auto</label>
    <type>Checkbox</type>
</CustomField>