force-app/main/default/objects/Project__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <description>Created By: YB
Business Unit: BTC-PM
Purpose: Date that the project is due to be completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>