force-app/main/default/objects/Project__c/fields/Designer_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Designer_Rate_Hourly__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Hourly Rate Field for Custom Dev Rate Card.</description>
    <label>Designer Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>