force-app/main/default/objects/Project__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <description>Created By: MH
Business Unit: BTC
Purpose: The estimated date of the Project will end.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>