force-app/main/default/objects/Project__c/fields/Google_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Link__c</fullName>
    <description>Created By: RG
Business Unit: BLDG - Design
Purpose: Link to design renders stored in google drive
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Google Drive Link</label>
    <type>Url</type>
</CustomField>