force-app/main/default/objects/Project__c/fields/Number_of_Project_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Project_Members__c</fullName>
    <description>Created By: CP
Business Unit: BTC-PM
Purpose: Rollup sum of the number of Project Member records. 
                Used in Validation checking number of project members before moving to Status, &quot;Internal Kickoff&quot; +</description>
    <label>Number of Project Members</label>
    <summaryForeignKey>Project_Member__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>