force-app/main/default/objects/Project__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: CP
Business Unit: BTC-PM
Purpose: Formula fields in &quot;Customer Decision Maker&quot; pull from this field(Lookup to contact).</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Lead</relationshipLabel>
    <relationshipName>Project_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>