force-app/main/default/objects/Project__c/fields/Project_Manager_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Rate_Hourly__c</fullName>
    <defaultValue>115</defaultValue>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Hourly Rate for Custom Dev Project Rate Card</description>
    <label>Project Manager Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>