force-app/main/default/objects/Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: MS
Business Unit: BTC
Purpose: Lookup to Project Owner.</description>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>