force-app/main/default/objects/Project__c/fields/SFDC_Administrator_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Administrator_Rate_Hourly__c</fullName>
    <defaultValue>165</defaultValue>
    <description>Created By: YB
Business Unit: BTC-PM
Purpose: Hourly rate for SFDC Rate Card.</description>
    <label>SFDC Administrator Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>