force-app/main/default/objects/Project__c/fields/SFDC_Developer_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Developer_Rate_Hourly__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Created By: YB
Business Unit: BTC-PM
Purpose: Hourly Rate for SFDC Rate Card</description>
    <label>SFDC Developer Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>