force-app/main/default/objects/Project__c/fields/SFDC_Platform_Architect_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Platform_Architect_Rate_Hourly__c</fullName>
    <defaultValue>400</defaultValue>
    <description>Created By: YB
Business Unit: BTC-PM
Purpose: The Hourly rate for the SFDC Rate Card.</description>
    <label>SFDC Platform Architect Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>