force-app/main/default/objects/Project__c/fields/SFDC_Project_Manager_Rate_Hourly__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Manager_Rate_Hourly__c</fullName>
    <defaultValue>225</defaultValue>
    <description>Created By: YB
Business Unit: BTC-PM
Purpose: The Hourly Rate for SFDC Rate Card.</description>
    <label>SFDC Project Manager Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>