force-app/main/default/objects/Project__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: RG
Business Unit: BLDG - Design
Purpose: Lookup to space for project location/space
Populated: Manually</description>
    <label>Space</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>