force-app/main/default/objects/Project__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Created by: JA
Business Unit: BWRD
Purpose: A high level summary of the proposed product and its purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide a high level summary of the product and it&apos;s purpose.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>