force-app/main/default/objects/Project__c/fields/Technical_Lead__c.field-meta.xml
<CustomField>
    <fullName>Technical_Lead__c</fullName>
    <defaultValue>185</defaultValue>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose:Hourly Rate for Custom Dev Project Rate Card</description>
    <label>Technical Lead Rate (Hourly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>