force-app/main/default/objects/Project__c/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <description>Created By: MH
Business Unit: BTC-PM
Purpose: Roll-Up Summary field that summarizes the total hours from all of the tasks associated with the Project.</description>
    <label>Total Billable Hours</label>
    <summarizedField>Project_Task__c.Billable_Hours__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>