force-app/main/default/objects/Project__c/recordTypes/BWTC_Project.recordType-meta.xml
<RecordType>
    <fullName>BWTC_Project</fullName>
    <active>true</active>
    <label>BWTC Project</label>
</RecordType>