force-app/main/default/objects/Project__c/recordTypes/Design_Project.recordType-meta.xml
<RecordType>
    <fullName>Design_Project</fullName>
    <active>true</active>
    <label>Design Project</label>
</RecordType>