force-app/main/default/objects/Project__c/recordTypes/LDA.recordType-meta.xml
<RecordType>
    <fullName>LDA</fullName>
    <active>true</active>
    <label>LDA</label>
</RecordType>