force-app/main/default/objects/Project__c/listViews/BLDG_Design_Projects.listView-meta.xml
<ListView>
    <fullName>BLDG_Design_Projects</fullName>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Design_Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Information Gathering,Planning,In-Progress,Polishing</value>
    </filters>
    <label>BLDG - Design Projects - Active</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <role>Chief_Real_Estate_Officer</role>
        <role>Executive</role>
        <role>VP_Real_Estate_Development</role>
        <role>VP_of_Tenant_Relations</role>
    </sharedTo>
</ListView>