force-app/main/default/objects/Project__c/listViews/BWTC_All.listView-meta.xml
<ListView>
    <fullName>BWTC_All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Number_of_Project_Members__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.BWTC_Project</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notEqual</operation>
        <value>Sold and Needs a Home</value>
    </filters>
    <label>BWTC - All</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>System_Administrator</role>
        <role>Tech_Consulting_Leads</role>
        <role>Tech_Consulting_Team</role>
    </sharedTo>
</ListView>