force-app/main/default/objects/Project__c/listViews/LDA_Projects_All.listView-meta.xml
<ListView>
    <fullName>LDA_Projects_All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.LDA</value>
    </filters>
    <label>LDA Projects - All</label>
</ListView>