force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Project_Members__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>System_Administrator</role>
        <role>Tech_Consulting_Leads</role>
        <role>Tech_Consulting_Team</role>
    </sharedTo>
</ListView>