force-app/main/default/objects/Project__c/listViews/Sold_and_Needs_a_Home_Project.listView-meta.xml
<ListView>
    <fullName>Sold_and_Needs_a_Home_Project</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Project_Members__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>Sold and Needs a Home</label>
    <queue>Sold_and_Needs_a_Home</queue>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>System_Administrator</role>
        <role>Tech_Consulting_Leads</role>
        <role>Tech_Consulting_Team</role>
    </sharedTo>
</ListView>